# bookstore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  coisa.md  heroku-deploy.yml  workflow-pr.yml
bookstore/: asgi.py  qqcs.md  settings.py  urls.py  views.py  wsgi.py
order/: __init__.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: __init__.py  order_serializer.py
order/tests/: __init__.py  factories.py  test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_product_price.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: factories.py  test_product_serializer.py
product/tests/test_serializers/: test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
